# ARtemis

./: .gitmodules  ARtemisConfig.cmake.in  CMakeLists.txt  README.md  appveyor.yml
ARtemis/: CMakeLists.txt
ARtemis/include/: ARTCalib.h  ARTTrack.h  ARtemisExports.h
ARtemis/src/: ARTCalib.cpp  ARTTrack.cpp
samples/: CMakeLists.txt
samples/include/: ARtemisSampleConfig.h.in
samples/src/: main.cpp
